# bigquery-dataflow-templates

./: .gitignore  Makefile  README.md  pyproject.toml  sdk.Dockerfile
.github/workflows/: publish.yml  workflow.yml
ai/whylabs/templates/: profile_query_template.py  template_profile_query.py
metadata/: batch_bigquery_template_metadata.json  batch_segmented_bigquery_metadata.json  profile_query_template_metadata.json
scripts/: create_version.py
src/ai/whylabs/templates/: batch_bigquery_template.py  batch_bigquery_template_test.py  batch_segmented_bigquery.py  profile_query_template.py  profile_query_template_test.py  version.py
