[tool.poetry]
name = "dataflow-templates"
version = "0.1.0"
description = "Templates for use in GCP's Dataflow."
authors = ["Anthony Naddeo <anthony.naddeo@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "src/**/*.py"}]

[tool.poetry.dependencies]
python = "3.8.*"
whylogs = {version = "1.1.12", extras = ["whylabs"]}
pandas = "^1.5.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.beam.dependencies]
apache-beam = {extras = ["gcp"], version = "^2.42.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
pytest = "^7.2.0"
black = "^22.10.0"
types-python-dateutil = "^2.8.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 140